apps/media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qb-service
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
  type: ClusterIP
